--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.popup-bg{
+  background-color: rgba(52, 52, 52, 0.6);
+  z-index: 50;
+}
+
+.popup{
+  width: 60%;
+  height: 60%;
+  background-color: white;
+}
